# rust-sqlx-example

./: .env  Cargo.toml
migrations/: 20200826112840_team.sql
src/: main.rs  models.rs  routes.rs
