[package]
name = "sqlx"
version = "0.1.0"
authors = ["SaltyAom <aomkirby@mystiar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0-beta.3"
actix-rt = "1.1.1"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres" ] }
serde = "1.0.115"
serde_json = "1.0.57"
futures = "0.3.5"
dotenv = "0.15.0"
anyhow = "1.0.32"
lazy_static = "1.4.0"